# fhirkit

./: .gitignore  CLAUDE.md  COMPLIANCE_PLAN.md  Makefile  README.md  cds_services.yaml  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/: cds-hooks-guide.md  cli.md  compliance.md  cql-api.md  cql-guide.md  cql-tutorial.md  datasources-guide.md  elm-api.md  elm-guide.md  elm-reference.md  fhir-server-guide.md  fhirpath-api.md  fhirpath-cql-tutorial.md  fhirpath-guide.md  fhirpath-tutorial.md  getting-started.md  index.md  measure-guide.md  plugins-guide.md
docs/fhir-server/: transactions.md  ui-guide.md
docs/fhir-server/operations/: diff.md  document.md  evaluate-measure.md  everything.md  patient-match.md  terminology.md
docs/fhir-server/resources/: account.md  activity-definition.md  allergy-intolerance.md  appointment.md  binary.md  care-team.md  careplan.md  charge-item-definition.md  charge-item.md  claim-response.md  claim.md  code-system.md  condition.md  contained-resources.md  contract.md  coverage-eligibility-request.md  coverage-eligibility-response.md  coverage.md  device-request.md  device.md  diagnostic-report.md  document-reference.md  encounter.md  enrollment-request.md  enrollment-response.md  explanation-of-benefit.md  goal.md  group.md  guidance-response.md  immunization-evaluation.md  immunization-recommendation.md  immunization.md  index.md  insurance-plan.md  invoice.md  library.md  location.md  measure-report.md  measure.md  medication-request.md  (+21 more)
docs/fhir-server/search/: elements-summary.md  include-revinclude.md  sort-parameter.md
docs/stylesheets/: extra.css
examples/cql/: 01_hello_world.cql  02_patient_queries.cql  03_observations.cql  04_conditions.cql  05_medications.cql  06_intervals.cql  07_functions.cql  08_quality_measure.cql
examples/fhir/: Binary-example.json  Composition-example.json  ConceptMap-example.json  bundle.json  condition.json  library.json  medication_request.json  observation_bp.json  observation_lab.json  patient.json
examples/fhirpath/: 01_basic_navigation.fhirpath  02_filtering.fhirpath  03_existence_checks.fhirpath  04_string_functions.fhirpath  05_math_and_quantities.fhirpath  06_dates_and_times.fhirpath  07_boolean_logic.fhirpath  08_collections.fhirpath  09_type_checking.fhirpath  10_coding_operations.fhirpath  11_comprehensive_functions.fhirpath  12_observation_examples.fhirpath  13_test_expressions.fhirpath
examples/postman/: fhir-server.postman_collection.json
examples/terminology/: example_usage.py
grammars/: cql.g4  fhirpath.g4
src/fhir_cql/: __init__.py  cds_cli.py  cli.py  cql_cli.py  fhirpath_cli.py  server_cli.py
src/fhir_cql/cds_hooks/: __init__.py
src/fhir_cql/cds_hooks/api/: routes.py
src/fhir_cql/cds_hooks/config/: __init__.py  settings.py
src/fhir_cql/cds_hooks/models/: __init__.py  discovery.py  feedback.py  request.py  response.py
src/fhir_cql/cds_hooks/service/: __init__.py  card_builder.py  executor.py  registry.py
src/fhir_cql/engine/cql/: context.py  evaluator.py  visitor.py
src/fhir_cql/engine/elm/: __init__.py  evaluator.py  visitor.py
src/fhir_cql/engine/fhirpath/: evaluator.py  visitor.py
src/fhir_cql/server/api/: app.py  patch.py  routes.py  ui_routes.py
src/fhir_cql/server/config/: settings.py
src/fhir_cql/server/generator/: __init__.py  adverse_event.py  appointment.py  care_team.py  claim.py  clinical_codes.py  code_system.py  coverage.py  device.py  explanation_of_benefit.py  group.py  healthcare_service.py  library.py  media.py  medication_dispense.py  patient.py  practitioner_role.py  questionnaire_response.py  related_person.py  risk_assessment.py  schedule.py  slot.py  task.py  value_set.py
src/fhir_cql/server/models/: __init__.py  resources.py
src/fhir_cql/server/templates/: base.html
src/fhir_cql/server/ui/: __init__.py  helpers.py
src/fhir_cql/server/validation/: __init__.py  rules.py  validator.py
src/fhirkit/: cds_cli.py  cli.py  cql_cli.py  elm_cli.py  fhirpath_cli.py  server_cli.py  terminology_cli.py
src/fhirkit/cds_hooks/api/: __init__.py  app.py
src/fhirkit/cds_hooks/config/: settings.py
src/fhirkit/cds_hooks/models/: request.py  response.py
src/fhirkit/cds_hooks/service/: executor.py  (+1 more)
src/fhirkit/engine/: __init__.py  context.py  exceptions.py  functions.py  types.py
src/fhirkit/server/: __init__.py
src/fhirkit/terminology/: __init__.py  models.py  service.py
tests/: test_advanced_search.py  test_audit_logging.py  test_cds_hooks_api.py  test_cds_hooks_card_builder.py  test_cds_hooks_cli.py  test_cds_hooks_config.py  test_cds_hooks_executor.py  test_cds_hooks_integration.py  test_cds_hooks_models.py  test_cds_hooks_registry.py  test_collection_existence_edge_cases.py  test_context.py  test_cql.py  test_cql_cli.py  test_cql_datasource.py  test_cql_evaluator.py  test_cql_external_functions.py  test_cql_intervals.py  test_cql_library_includes.py  test_cql_measure.py  test_cql_multiple_sources.py  test_cql_plugins.py  test_cql_precision_functions.py  test_cql_with_without.py  test_elm_aggregate.py  test_elm_datetime.py  test_elm_evaluator.py  test_elm_external_libs.py  test_elm_models.py  test_elm_serializer.py  test_elm_type_cast.py  test_evaluate_measure.py  test_fhir_bulk.py  test_fhir_conditional.py  test_fhir_contained.py  test_fhir_diff.py  test_fhir_functions.py  test_fhir_generators.py  test_fhir_group_measure.py  test_fhir_new_operations.py  (+23 more)
tests/compliance/: __init__.py  conftest.py  test_runner.py
tests/compliance/cql/: __init__.py  test_cql_compliance.py
tests/compliance/fhir/: test_fhir_compliance.py
tests/compliance/fhirpath/: __init__.py  test_fhirpath_compliance.py
(+241 files in other folders)
