[project]
name = "fhirkit"
version = "0.1.0"
description = "FHIR toolkit with FHIRPath, CQL, CDS Hooks, and FHIR Server for Python"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
keywords = ["fhir", "fhirpath", "cql", "hl7", "healthcare", "clinical", "cds-hooks", "elm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "antlr4-python3-runtime>=4.13.2",
    "typer>=0.15.0",
    "rich>=13.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "pyyaml>=6.0",
    "faker>=38.2.0",
]

[project.scripts]
fhir = "fhirkit.cli:app"

[project.urls]
Homepage = "https://github.com/winterop-com/fhirkit"
Documentation = "https://winterop-com.github.io/fhirkit"
Repository = "https://github.com/winterop-com/fhirkit"
Issues = "https://github.com/winterop-com/fhirkit/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fhirkit"]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pyright>=1.1.390",
    "pytest>=8.3.0",
    "pytest-cov>=4.0.0",
    "types-PyYAML>=6.0",
    "httpx>=0.27.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
]

[tool.ruff]
target-version = "py313"
line-length = 120
exclude = ["generated"]

[tool.ruff.lint]
fixable = ["ALL"]
select = ["E", "W", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = false
strict_equality = true
mypy_path = ["src"]
exclude = ["generated/"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "antlr4.*",
    "generated.*",
    "fhirpathLexer",
    "fhirpathParser",
    "fhirpathVisitor",
    "fhirpathListener",
    "cqlLexer",
    "cqlParser",
    "cqlVisitor",
    "cqlListener",
]
ignore_missing_imports = true
ignore_errors = true

[tool.pyright]
include = ["src"]
pythonVersion = "3.13"
typeCheckingMode = "strict"
useLibraryCodeForTypes = true
reportPrivateUsage = false
reportUnusedFunction = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownParameterType = false
reportUnknownVariableType = false
reportMissingTypeArgument = false
reportMissingTypeStubs = false
reportUnknownLambdaType = false
reportMissingImports = false
reportUntypedBaseClass = false
reportUnusedVariable = false
reportAttributeAccessIssue = false
reportIncompatibleVariableOverride = false
reportUnnecessaryIsInstance = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
